# memoforge

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DELIVERY.md  Dockerfile.http  Dockerfile.mcp  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES.md  SPRINT5_SUMMARY.md  demo_sse_server.py  start.ps1  start.sh  test_e2e.py  test_follow_mode.py  test_graph_e2e.py  test_mcp_integration.py  test_mcp_simple.py  test_sse_server.sh
.github/workflows/: ci.yml  release.yml
crates/memoforge-core/: Cargo.toml
crates/memoforge-core/examples/: test_core_api.rs  test_get_tags.rs
crates/memoforge-core/src/: agent.rs  api.rs  cache.rs  config.rs  context_pack.rs  context_pack_store.rs  document_ops.rs  draft.rs  editor_state.rs  error.rs  events.rs  frontmatter.rs  fs.rs  git.rs  governance.rs  governance_api.rs  import.rs  inbox.rs  inbox_store.rs  init.rs  init_test.rs  knowledge.rs  lib.rs  links.rs  lock.rs  models.rs  registry.rs  reliability.rs  reliability_rules.rs  reliability_store.rs  review.rs  review_projection.rs  session.rs  session_store.rs  store.rs  template.rs  watcher.rs  workflow_template.rs  workflow_template_store.rs
crates/memoforge-core/templates/: git-workflow.md  rust-async.md  welcome.md
crates/memoforge-core/tests/: inbox_session_integration.rs
crates/memoforge-http/: Cargo.toml  SECURITY.md
crates/memoforge-http/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  routes.rs
crates/memoforge-http/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/memoforge-mcp/: Cargo.toml  README.md
crates/memoforge-mcp/src/: lib.rs  main.rs  sse.rs  tools.rs
crates/memoforge-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/memoforge-tauri/icons/: icon.icns
crates/memoforge-tauri/src/: desktop_state_publisher.rs  main.rs  memory_state.rs
docs/: AI协作机制修复报告.md  SSE_MCP_ACCEPTANCE.md  SSE_MCP_IMPLEMENTATION.md  SSE_MCP_QUICKSTART.md  SSE_MCP_SUMMARY.md  mcp-integration.md  test-report-2026-03-25.md
docs/design/: PRD.md  ui.pen  技术实现文档.md
docs/planning/: AgentTeams提示词.md  Agent协作增强Sprint1任务拆解.md  Agent协作增强与MCP精简方案.md  DEVELOPMENT_GUIDE.md  ForgeNerve-vNext Agent Teams提示词.md  ForgeNerve-vNext MCP契约矩阵.md  ForgeNerve-vNext Sprint1任务拆解.md  ForgeNerve-vNext Sprint1验收矩阵.md  ForgeNerve-vNext产品需求文档.md  ForgeNerve-vNext任务清单.md  ForgeNerve-vNext依赖矩阵.md  ForgeNerve-vNext决策冻结清单.md  ForgeNerve-vNext差异化战略.md  ForgeNerve-vNext开发前准备清单.md  ForgeNerve-vNext开发计划.md  ForgeNerve-vNext技术方案.md  ForgeNerve-vNext数据模型与状态机.md  ForgeNerve-vNext文档索引.md  ForgeNerve-vNext桌面接口冻结表.md  ForgeNerve-vNext测试与验收计划.md  ForgeNerve品牌升级公告.md  ForgeNerve品牌迁移方案.md  ForgeNerve官网完整落地结构稿.md  README.md  Tauri桌面应用下阶段特性规划.md  windows-first-run-checklist.md  开发计划文档.md  规划与现状对齐说明.md
docs/planning/archive/: AgentTeams提示词.md  Agent协作增强与MCP精简方案.md  Agent协作增强开发计划.md  README.md  Tauri桌面应用Epic与任务拆解.md  Tauri桌面应用下阶段特性规划.md  Tauri桌面应用增强开发计划.md  follow-mode-fix.md  开发计划文档.md
docs/planning/brand/: ForgeNerve官网首页文案.md  ForgeNerve应用启动页文案层级.md
docs/planning/releases/v0.3.0/: ForgeNerve-v0.3.0-Agent Teams提示词.md  ForgeNerve-v0.3.0-MCP契约矩阵.md  ForgeNerve-v0.3.0-Sprint1任务拆解.md  ForgeNerve-v0.3.0-Sprint1验收矩阵.md  ForgeNerve-v0.3.0-Subagent协作提示词.md  ForgeNerve-v0.3.0-产品需求文档.md  ForgeNerve-v0.3.0-任务清单.md  ForgeNerve-v0.3.0-依赖矩阵.md  ForgeNerve-v0.3.0-决策冻结清单.md  ForgeNerve-v0.3.0-差异化战略.md  ForgeNerve-v0.3.0-开发前准备清单.md  ForgeNerve-v0.3.0-开发计划.md  ForgeNerve-v0.3.0-技术方案.md  ForgeNerve-v0.3.0-数据模型与状态机.md  ForgeNerve-v0.3.0-文档索引.md  ForgeNerve-v0.3.0-桌面接口冻结表.md  ForgeNerve-v0.3.0-测试与验收计划.md
docs/tech_notes/: HarnessEngineering.md  ci-desktop-e2e.md  release-checklist.md  release-ci-strategy.md  release-day-runbook.md  release-launch-pack.md
docs/updates/: frontend-realtime-state-update.md  frontend-state-testing-guide.md
frontend/: index.html  landing.html  package-lock.json  package.json  rich-editor-preview.html  tailwind.config.js  test.html  vite.config.ts
frontend/e2e/: http-ui-e2e.mjs
frontend/public/: forgenerve-landing-preview.html
frontend/src/: App.tsx  brand.css  index.css  landing.css  landing.tsx  rich-editor-preview.tsx
frontend/src/components/: AgentDraftPanel.tsx  AgentSessionPanel.tsx  BacklinksPanel.tsx  ConfirmDialog.tsx  ContextPackPanel.tsx  CurrentKnowledgeEditorPane.test.tsx  CurrentKnowledgeEditorPane.tsx  DirectoryKnowledgeBrowser.tsx  DraftPreviewModal.tsx  Editor.tsx  EditorEdit.tsx  EditorRead.test.tsx  EditorRead.tsx  EditorRich.test.tsx  EditorRich.tsx  EditorRichWikiLink.ts  EvidenceMetaPanel.tsx  ForgeNerveLogo.tsx  FreshnessActions.tsx  GettingStartedCard.tsx  GitOverviewPanel.tsx  GitPanel.test.tsx  GitPanel.tsx  ImportModal.tsx  InboxPanel.tsx  KbSwitcher.tsx  KnowledgeGraphPanel.test.tsx  KnowledgeGraphPanel.tsx  KnowledgeHealthPanel.tsx  KnowledgeListItem.tsx  KnowledgeTreeNav.tsx  MetadataPanel.tsx  MinimalWorkspace.tsx  NewKnowledgeModal.tsx  ReadOnlyBanner.tsx  RecentActivityPanel.tsx  ReliabilityDashboardPanel.tsx  ReviewPanel.tsx  RightPanel.test.tsx  RightPanel.tsx  (+14 more)
frontend/src/components/ui/: Button.tsx  (+2 more)
frontend/src/hooks/: useAutoSave.test.ts  useAutoSave.ts  useEditorStatePublisher.ts  useKnowledgeNavigation.test.ts  useKnowledgeNavigation.ts
frontend/src/lib/: externalLinks.ts  knowledgeChanges.ts  knowledgeDrafts.ts  knowledgeTree.ts  markdownSections.test.ts  markdownSections.ts  markdownTable.test.ts  markdownTable.ts  markdownTasks.test.ts  markdownTasks.ts  releaseLinks.ts  settings.ts  wikiLinks.test.ts  wikiLinks.ts  workflowRender.test.ts  workflowRender.ts
frontend/src/services/: api.ts  http.ts  tauri.ts
frontend/src/stores/: appStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: governance.ts  index.ts  review.ts  workflow.ts
tests/: conftest.py  draft_flow_e2e.py  e2e_test.sh  frontend_e2e.py  frontend_ops_e2e.py  mcp_e2e.py  sprint1_user_e2e.py  sprint2_user_e2e.py  sprint3_reliability_e2e.py  sprint3_user_e2e.py  sprint4_context_pack_e2e.py  sse_e2e.py  tauri_desktop_e2e.py  test_api_filtering.py  test_category_filter.py  v030_e2e.py  windows_tauri_e2e.py
