[workspace]
members = [
    "crates/memoforge-core",
    "crates/memoforge-mcp",
    "crates/memoforge-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MemoForge Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/memoforge"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
