[workspace]
members = [
    "crates/memoforge-core",
    "crates/memoforge-mcp",
    "crates/memoforge-tauri",
    "crates/memoforge-http",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MemoForge Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/memoforge"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
