[package]
name = "memoforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
git2 = "0.19"
notify = "6.1"
fs2 = "0.4"
lru = "0.12"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
libc = "0.2"
sysinfo = "0.30"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi"] }

[dev-dependencies]
tempfile = "3.10"
