[package]
name = "memoforge-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
memoforge-core = { path = "../memoforge-core" }
memoforge-mcp = { path = "../memoforge-mcp" }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
chrono.workspace = true
async-channel = "2.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.10"
